--- a/try.html
+++ b/try.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="swiper-12.0.1/package/swiper-bundle.min.css">
+    <link rel="stylesheet" href="swiper-bundle.min.css">
     <link rel="stylesheet" href="bootstrap-5.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="try.css">
 </head>
@@ -81,7 +81,7 @@
         <div class="swiper-pagination"></div>
     </div>
     
-    <script src="swiper-12.0.1/package/swiper-bundle.min.js"></script>
+    <script src="swiper-bundle.min.js"></script>
 
     <script>
         var swiper = new Swiper(".MenuSwiper", {
@@ -103,4 +103,5 @@
         });
     </script>
 </body>
+
 </html>
