--- a/try.html
+++ b/try.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="swiper-bundle.min.css">
-    <link rel="stylesheet" href="bootstrap-5.3.7-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="try.css">
 </head>
 <body>
@@ -105,3 +105,4 @@
 </body>
 
 </html>
+
